Update and rename drum.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JS Drum Kit</title>
-  <link rel="stylesheet" href="drum.css">
+  <title>Ayden Drum Kit</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
